<resources>
    <string name="app_name">CaArt \n내 차만들기</string>
    <string name="exterior_color">외장 색상</string>
    <string name="interior_color">내장 색상</string>
    <string name="buyer_selected">%의 구매자가 선택한</string>
    <string name="lifestyle_vehicle_recommendation">당신의 라이프스타일에 맞게 차량을 추천해드려요.</string>
    <string name="prompt_exit_car_builder">내 차 만들기를 종료하시겠어요?</string>
    <string name="option_reset_message">선택한 옵션들은 모두 초기화 됩니다.</string>
    <string name="yes">네</string>
    <string name="no">아니요</string>
    <string name="prev">이전</string>
    <string name="next">다음</string>
    <string name="directly_create">직접 만들래요</string>
    <string name="recommendation">추천받기</string>
    <string name="ask_for_age">나이를 알려주세요.</string>
    <string name="exclusive">Exclusive</string>
    <string name="le_blanc">Le Blanc (르블랑)</string>
    <string name="prestige">Prestige</string>
    <string name="caligraphy">Caligraphy</string>
    <string name="palisade">팰리세이드</string>
    <string name="car_exterior_spin_image">자동차 외장을 나타내는 360도 이미지</string>
    <string name="car_interior_image">자동차 내장 이미지를 나타내는 이미지</string>
    <string name="trim">트림</string>
    <string name="color">색상</string>
    <string name="option">옵션</string>
    <string name="right_arrow">오른쪽 화살표</string>
    <string name="price">43,460,000원</string>
    <string name="model">모델</string>
    <string name="seater">7인승</string>
    <string name="default_model_name">팰리세이드 디젤 2.2 2WD Le Blanc</string>
    <string name="summary_view">요약보기</string>
    <string name="estimate">견적내기</string>
    <string name="quilting_natural_black">퀄팅천연 (블랙)</string>
    <string name="graphite_gray_metallic">그라파이 그레이 메탈릭</string>
    <string name="top1">Top1</string>
    <string name="spin_active_button">spinActiveButton</string>
    <string name="ask_search_other_exterior_color">다른 외장 색상을 찾고 있나요?</string>
    <string name="ask_search_other_interior_color">다른 내장 색상을 찾고 있나요?</string>
    <string name="guild_change_price">변경 금액</string>
    <string name="basic_option">기본 포함 옵션</string>
    <string name="additional_option">추가 옵션</string>
    <string name="difficult_to_choose">고르기 어렵다면?</string>
    <string name="engine">엔진</string>
    <string name="choice">선택</string>
    <string name="formatted_price">%1$s원</string>
    <string name="more_find">더 알아보기</string>
    <string name="body">바디</string>
    <string name="driven">구동방식</string>
    <string name="default_include_option">기본 포함 옵션</string>
    <string name="interior">내장</string>
    <string name="exterior">외장</string>
    <string name="more">더 알아보기</string>
    <string name="see_more">더보기</string>
    <string name="total">전체</string>
    <string name="suggest_check_option_detail">* 상기 이미지는 이해를 돕기 위한 이미지로 실제 옵션 사진은 상세보기에서 확인해주세요.</string>
    <string name="max_power">최대 파워</string>
    <string name="max_torque">최대 토크</string>
    <string name="max_power_desc">45.0/1,750~2,750kgf-m/rpm</string>
    <string name="max_torque_desc">202/3,800PS/rpmTextView</string>
    <string name="horse_power">최고 출력</string>
    <string name="trim_desc">고마력의 우수한 가속 성능을 확보하여, 넉넉하고 안정감 있는 주행이 가능합니다. 엔진의 진동이 적어 편안하고 조용한 드라이빙 감성을 제공합니다.</string>
    <string name="recommend_life_style">당신의 라이프 스타일에 맞게\n차량을 추천해드려요.</string>
    <string name="life_style">라이프 스타일</string>
    <string name="make_myself">직접 만들래요</string>
    <string name="recommend">추천받기</string>
    <string name="peek_into_lifestyle">라이프스타일 엿보기</string>
    <string name="no_lifestyle_you_want">원하는 라이프스타일이 없다면?</string>
    <string name="select_lifestyle_detail">라이프스타일 상세 선택</string>
    <string name="default_composition">가솔린 2.2 2WD 8인승</string>
    <string name="pdf">PDF로 저장</string>
    <string name="send_mail">메일로 발송</string>
    <string name="save_my_account">내 계정에 저장하기</string>
    <string name="car_purchase">차량 구매</string>
    <string name="recommend_adoption_rate">75%의 20~30대 구매자들이 선택했어요</string>
    <string name="for_you">For You</string>
    <string name="question_q">Q.</string>
    <string name="interview">Interview</string>
    <string name="car_total_etimate_price_title">차량 총 견적 금액</string>
    <string name="modify">수정</string>
    <string name="total_price">총 금액</string>
    <string name="complete_my_car">나만의 차가 완성되었어요!</string>
    <string name="can_save_and_share_your_car">만든 차는 저장하고 공유할 수 있어요.</string>
    <string name="purchase_consultant">구매/상담</string>
    <string name="current_trim">현재 트림</string>
    <string name="change_trim">변경 트림</string>
    <string name="trim_change_popup_message">트림으로 변경 하시겠어요?</string>
    <string name="infomation_change_color_popup">색상은 트림 변경 후 선택할 수 있어요.</string>
    <string name="change">변경하기</string>
    <string name="its_question_based_recommendation_car">질문에 기반한 추천 차량이에요</string>
    <string name="car_masters_recommended_it">전국의 Car master 분들이 엄선하여 추천했어요</string>
    <string name="custom">커스텀하기</string>
    <string name="making_my_palisade">나만의 팰리세이드를 \n만들고 있어요</string>
    <string name="zero">0</string>
    <string name="won">원</string>
    <string name="n_performance">N Performance</string>
    <string name="h_genuine_accessories">H Genuine Accessories</string>
    <string name="network_error">에러가 발생했습니다.\n 잠시 후 다시 시도해주세요.</string>
    <string name="sharing">공유하기</string>
    <string name="sharing_description">구성하신 견적이 URL로 생성되었어요.\n아래 URL을 공유하시면 견적을 다시 확인하실 수 있어요.\n(30일간 유효)</string>
    <string name="copy">복사하기</string>
    <string name="example_url">https://www.hyundai.com/kr/ko/e/vehicles/estimation/</string>
    <string name="send">보내기</string>
    <string name="example_email">example@mail.com</string>
    <string name="input_email_address">메일 주소를 알려주세요</string>
    <string name="send_email_description">해당 주소로 만들어진 내 차를 보내드립니다.</string>
    <string name="developing">아직 준비중인 서비스에요</string>
    <string name="request_login">로그인이 필요한 서비스에요.\n로그인 화면으로 이동하시겠어요?</string>
    <string name="hyundai_estimate_site_url">https://www.hyundai.com/kr/ko/e/vehicles/purchase-consult</string>
    <string name="change_pop_up_color_option">지금 변경하시면 선택한 색상과 옵션이 해제돼요.</string>
    <string name="change_pop_up_color">지금 변경하시면 선택한 색상이 해제돼요.</string>
    <string name="internal_color_to_be_released">해제 되는 내장 색상</string>
    <string name="option_to_be_released">해제 되는 옵션</string>
</resources>