<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="currentIndex"
            type="Integer" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_detail_indicator_trim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trim"
            app:detailIndicatorSelected="@{currentIndex==0}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_detail_indicator_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/color"
            app:detailIndicatorSelected="@{currentIndex==1}"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:id="@+id/tv_detail_indicator_option"
            detailIndicatorSelected="@{currentIndex==2}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/option"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/right_arrow"
            android:rotation="270"
            app:layout_constraintBottom_toBottomOf="@+id/tv_detail_indicator_trim"
            app:layout_constraintStart_toEndOf="@+id/tv_detail_indicator_trim"
            app:layout_constraintTop_toTopOf="@+id/tv_detail_indicator_trim"
            app:srcCompat="@drawable/ic_arrow_no_tail_20"
            app:tint="@color/gray_500" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/right_arrow"
            android:rotation="270"
            app:layout_constraintBottom_toBottomOf="@+id/tv_detail_indicator_color"
            app:layout_constraintStart_toEndOf="@+id/tv_detail_indicator_color"
            app:layout_constraintTop_toTopOf="@+id/tv_detail_indicator_color"
            app:srcCompat="@drawable/ic_arrow_no_tail_20"
            app:tint="@color/gray_500" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
