<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="110dp">

    <TextView
        android:id="@+id/tv_productName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/hyundaisansheadkrregular"
        android:text="@string/le_blanc"
        android:textColor="@color/gray_500"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_previous"
        style="@style/SecondaryButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/prev"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/btn_next"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_next"
        style="@style/PrimaryButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_price"
        style="@style/PriceTextStyle"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="32dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_previous"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/ic_arrow_no_tail_20"
        android:backgroundTint="@color/black"
        android:rotation="180"
        app:layout_constraintEnd_toStartOf="@+id/tv_price"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
