<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="userViewModel"
            type="org.softeer_2nd.caArt.viewmodel.UserChoiceViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="452dp"
                android:background="#E6EAEF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_make_complete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/hyundaisansheadkrmedium"
                android:text="@string/complete_my_car"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_can_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/can_save_and_share_your_car"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_make_complete" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_my_car"
                android:layout_width="320dp"
                android:layout_height="274dp"
                android:layout_marginHorizontal="28dp"
                android:layout_marginTop="111dp"
                android:layout_marginBottom="52dp"
                app:cardCornerRadius="15dp"
                app:elevation="0dp"
                app:layout_constraintBottom_toBottomOf="@id/view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/iv_my_car"
                        android:layout_width="0dp"
                        android:layout_height="200dp"
                        android:background="@drawable/img_my_car"
                        android:scaleType="centerCrop"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_car_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="11dp"
                        android:fontFamily="@font/hyundaisansheadkrregular"
                        android:text="@string/palisade"
                        android:textColor="@color/gray_300"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/iv_my_car" />

                    <ImageView
                        android:id="@+id/iv_upload"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_circle_upload_68"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_model_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="16dp"
                        android:fontFamily="@font/hyundaisansheadkrmedium"
                        android:text="@{userViewModel.selectedTrim.trimName}"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_car_name"
                        tools:text="@string/le_blanc" />

                    <ImageView
                        android:id="@+id/iv_hyundai_long_logo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/ic_hyundai_logo_long_70"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/iv_my_car" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/hyundaisansheadkrregular"
                android:text="@string/model"
                android:textColor="@color/gray_300"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view" />

            <TextView
                android:id="@+id/tv_choice_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/hyundaisansheadkrregular"
                android:text="@string/palisade"
                android:textColor="@color/gray_100"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_model" />

            <TextView
                android:id="@+id/tv_choice_composition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:fontFamily="@font/hyundaisansheadkrregular"
                android:text="@string/default_composition"
                android:textColor="@color/gray_400"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/tv_choice_model"
                app:layout_constraintTop_toTopOf="@+id/tv_choice_model" />

            <TextView
                android:id="@+id/tv_model_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/hyundaisansheadkrmedium"
                app:formattedPrice="@{userViewModel.selectedTrim.trimPrice}"
                android:textColor="@color/gray_100"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/tv_choice_model"
                app:layout_constraintTop_toBottomOf="@id/tv_choice_model"
                tools:text="@string/price" />

            <View
                android:id="@+id/view_model_price_bottom_divider"
                style="@style/CaArtBorderViewStyle"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="19dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_model_price" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_choice_options"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_model_price_bottom_divider" />

            <TextView
                android:id="@+id/tv_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/hyundaisansheadkrmedium"
                android:text="@string/total_price"
                android:textColor="@color/gray_400"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_choice_options" />

            <TextView
                android:id="@+id/tv_total_price_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/hyundaisansheadkrmedium"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:formattedPrice="@{userViewModel.totalPrice}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/tv_total_price"
                app:layout_constraintTop_toBottomOf="@id/rv_choice_options"
                tools:text="@string/price" />

            <Button
                android:id="@+id/btn_pdf_save"
                style="@style/SecondaryButtonStyle"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/hyundaisansheadkrmedium"
                android:text="@string/pdf"
                android:textColor="@color/gray_200"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@id/btn_send_mail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_total_price_number" />

            <Button
                android:id="@+id/btn_send_mail"
                style="@style/SecondaryButtonStyle"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/hyundaisansheadkrmedium"
                android:text="@string/send_mail"
                android:textColor="@color/gray_200"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_pdf_save"
                app:layout_constraintTop_toBottomOf="@id/tv_total_price_number" />

            <Button
                android:id="@+id/btn_save_my_account"
                style="@style/SecondaryButtonStyle"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/hyundaisansheadkrmedium"
                android:text="@string/save_my_account"
                android:textColor="@color/gray_200"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_send_mail" />

            <View
                android:id="@+id/view_save_account_bottom_divider"
                style="@style/CaArtBorderViewStyleLargerHeight"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_save_my_account" />

            <TextView
                android:id="@+id/tv_car_purchase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="23dp"
                android:fontFamily="@font/hyundaisansheadkrmedium"
                android:text="@string/car_purchase"
                android:textColor="@color/gray_100"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_save_account_bottom_divider" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_order_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_car_purchase" />

            <TextView
                android:id="@+id/tv_car_total_etimate_price_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/hyundaisansheadkrmedium"
                android:text="@string/car_total_etimate_price_title"
                android:textColor="@color/gray_400"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_order_detail" />

            <TextView
                android:id="@+id/tv_car_total_etimate_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="17dp"
                android:fontFamily="@font/hyundaisansheadkrmedium"
                android:textColor="@color/active_blue"
                android:textSize="18sp"
                app:formattedPrice="@{userViewModel.totalPrice}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@id/tv_car_total_etimate_price_title"
                app:layout_constraintTop_toTopOf="@id/tv_car_total_etimate_price_title"
                tools:text="@string/price" />

            <Button
                android:id="@+id/btn_modify"
                style="@style/SecondaryButtonStyle"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="25dp"
                android:fontFamily="@font/hyundaisansheadkrmedium"
                android:text="@string/modify"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_purchase_consulting"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_car_total_etimate_price_title" />

            <Button
                android:id="@+id/btn_purchase_consulting"
                style="@style/PrimaryButtonStyle"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="25dp"
                android:fontFamily="@font/hyundaisansheadkrmedium"
                android:text="@string/purchase_consultant"
                android:textColor="@color/gray_1000"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_modify"
                app:layout_constraintTop_toBottomOf="@id/tv_car_total_etimate_price_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>